// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cbuLjy hlBSeU"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-dTCDEk hRMivF"
      tabindex="0"
    >
      <span
        class="sc-htBWof hpkRhl"
      >
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fmtEmb kQIOyp sc-iFUzrA gkCvcF"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-ljIcGq eCedXp"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jlJOIR VLSI"
    >
      : 
    </i>
    <span
      class="sc-iruNHB iBGxLA"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cbuLjy hlBSeU"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-dTCDEk hRMivF"
      tabindex="0"
    >
      <span
        class="sc-htBWof hpkRhl"
      >
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fmtEmb kQIOyp sc-iFUzrA gkCvcF"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-ljIcGq eCedXp"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jlJOIR VLSI"
    >
      : 
    </i>
    <span
      class="sc-iruNHB iBGxLA"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cbuLjy hlBSeU"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-dTCDEk hRMivF"
      tabindex="0"
    >
      <span
        class="sc-htBWof hpkRhl"
      >
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fmtEmb kQIOyp sc-iFUzrA gkCvcF"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-ljIcGq eCedXp"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jlJOIR VLSI"
    >
      : 
    </i>
    <span
      class="sc-iruNHB iBGxLA"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-fmtEmb kQIOyp sc-eVYbGh bMWyYT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-ljIcGq eCedXp"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cbuLjy hlBSeU"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-dTCDEk hRMivF"
      tabindex="0"
    >
      <span
        class="sc-htBWof hpkRhl"
      >
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fmtEmb kQIOyp sc-iFUzrA gkCvcF"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-ljIcGq eCedXp"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jlJOIR VLSI"
    >
      : 
    </i>
    <span
      class="sc-iruNHB iBGxLA"
    >
      hey
       
      <span
        class="sc-fmtEmb kQIOyp sc-eVYbGh bMWyYT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-ljIcGq eCedXp"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-fmtEmb kQIOyp sc-eVYbGh bMWyYT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-ljIcGq eCedXp"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cbuLjy hlBSeU"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-dTCDEk hRMivF"
      tabindex="0"
    >
      <span
        class="sc-htBWof hpkRhl"
      >
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fmtEmb kQIOyp sc-iFUzrA gkCvcF"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-ljIcGq eCedXp"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jlJOIR VLSI"
    >
      : 
    </i>
    <span
      class="sc-iruNHB iBGxLA"
    >
      hey
       
      <span
        class="sc-fmtEmb kQIOyp sc-eVYbGh bMWyYT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-ljIcGq eCedXp"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cbuLjy hlBSeU"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-dTCDEk hRMivF"
      tabindex="0"
    >
      <span
        class="sc-htBWof hpkRhl"
      >
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fmtEmb kQIOyp sc-iFUzrA gkCvcF"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-ljIcGq eCedXp"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jlJOIR VLSI"
    >
      : 
    </i>
    <span
      class="sc-iruNHB iBGxLA"
    >
      <span
        class="sc-fmtEmb kQIOyp sc-eVYbGh bMWyYT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-ljIcGq eCedXp"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cbuLjy hlBSeU"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-dTCDEk hRMivF"
      tabindex="0"
    >
      <span
        class="sc-htBWof hpkRhl"
      >
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fmtEmb kQIOyp sc-iFUzrA gkCvcF"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-ljIcGq eCedXp"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jlJOIR VLSI"
    >
      : 
    </i>
    <span
      class="sc-iruNHB iBGxLA"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-fmtEmb kQIOyp sc-eVYbGh bMWyYT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-ljIcGq eCedXp"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-cbuLjy Fspdb"
    role="document"
  >
    <div
      class="sc-hhXYTC eNjlRP sc-dTCDEk hRMivF"
      tabindex="0"
    >
      <span
        class="sc-htBWof hpkRhl"
      >
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-jlJOIR VLSI"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-fmtEmb kQIOyp sc-iFUzrA gkCvcF"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-ljIcGq eCedXp"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-jlJOIR VLSI"
    >
      : 
    </i>
    <span
      class="sc-iruNHB iBGxLA"
    >
      Hey
       
      <span
        class="sc-fmtEmb kQIOyp sc-eVYbGh bMWyYT"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-ljIcGq eCedXp"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
